# simple-vernam-cipher

./: README.md  cipher.py  main.py  pyproject.toml
