[tool.poetry]
name = "simple-vernam-cipher"
version = "0.1.0"
description = ""
authors = ["Eugene Chekan <eugene.chekan@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_vernam_cipher"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
